--- a/app/views/casein/posts/index.html.erb
+++ b/app/views/casein/posts/index.html.erb
@@ -10,6 +10,6 @@
 
 <%= content_for :sidebar do %>
 
-	<li><%= link_to "#{casein_show_icon "plus-sign"}Add a new post".html_safe, new_casein_post_path %></li>
+	<li><%= link_to "#{casein_show_icon "plus-sign"}Adicionar novo Post".html_safe, new_casein_post_path %></li>
 
 <% end %>
