--- a/app/views/casein/posts/_form.html.erb
+++ b/app/views/casein/posts/_form.html.erb
@@ -3,24 +3,30 @@
 
 <div class="row">
 	<div class="col-lg-6">
-		<%= casein_text_field f, f.object, :title %>
+		<%= casein_text_field f, f.object, :title, {:casein_label => "Título"} %>
 	</div>
 	<div class="col-lg-6">
-		<%= casein_text_field f, f.object, :author %>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-lg-6">
-		<%= casein_datetime_select f, f.object, :pub_date %>
-	</div>
-	<div class="col-lg-6">
-		<%= casein_text_area f, f.object, :about %>
+		<%= casein_text_field f, f.object, :author, {:casein_label => "Autor"} %>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-lg-12">
-		<%= casein_text_area_big f, f.object, :content %>
+		<%= casein_datetime_select f, f.object, :pub_date, {:casein_label => "Título"} %>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-6">
+		<% sections = PostSection.all.map { |section| [section.name, section.id] } %>
+		<%= casein_select f, f.object, :post_sections_id, options_for_select(sections, f.object["post_sections_id"]), :casein_label => "Seção" %>
+	</div>
+	<div class="col-lg-6">
+		<%= casein_text_area f, f.object, :about, {:casein_label => "Assunto"} %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-12">
+		<%= casein_text_area_big f, f.object, :content, {:casein_label => "Conteúdo"} %>
 	</div>
 </div>
