--- a/app/views/casein/posts/show.html.erb
+++ b/app/views/casein/posts/show.html.erb
@@ -4,15 +4,15 @@
 
 <%= form_for @post, :url => casein_post_path(@post) do |f| %>
 
-	<%= render :partial => 'casein/posts/form', :locals => { :f => f } %>
+	<%= render :partial => 'casein/posts/form', :locals => { :f => f, :post_sections => @post_sections } %>
 	
 	<p class="submits">
-	  	<%= link_to 'Cancel', casein_posts_path, :class => 'btn btn-mini btn-danger' %>
-		<%= f.submit "Save changes", :class => "btn btn-mini btn-primary" %>
+	  	<%= link_to 'Cancelas', casein_posts_path, :class => 'btn btn-mini btn-danger' %>
+		<%= f.submit "Salvar", :class => "btn btn-mini btn-primary" %>
 	</p>
 
 <% end %>
 
 <%= content_for :sidebar do %>
-	<li><%= link_to "#{casein_show_icon "th-list"}Back to list".html_safe, casein_posts_path %></li>
+	<li><%= link_to "#{casein_show_icon "th-list"}Voltar à Lista".html_safe, casein_posts_path %></li>
 <% end %>
