add ckeditor to post edit page

--- a/app/views/casein/posts/_form.html.erb
+++ b/app/views/casein/posts/_form.html.erb
@@ -27,6 +27,6 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<%= casein_text_area_big f, f.object, :content, {:casein_label => "Conteúdo"} %>
+		<%= casein_text_area_big f, f.object, :content, {:casein_label => "Conteúdo", :class => 'ckeditor'} %>
 	</div>
 </div>
