--- a/app/views/casein/post_sections/_form.html.erb
+++ b/app/views/casein/post_sections/_form.html.erb
@@ -6,6 +6,6 @@
 		<%= casein_text_field f, f.object, :name, {:casein_label => "Nomes"} %>
 	</div>
 	<div class="col-lg-6">
-		
+		<%= casein_text_field f, f.object, :description, {:casein_label => "Descrição"} %>
 	</div>
 </div>
