W3CBrasil/OD4D#50 - pairing w/ @alfredosegundo - Added static Menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,35 @@
         <li><a href="">SOBRE A PLATAFORMA</a></li>
         <li>
           <a class="dropdown" href="">COMO PARTICIPAR</a>
+          <ul class="submenu">
+              <li><a href="#">item 1</a></li>
+              <li><a href="#">item 2</a></li>
+              <li><a href="#">item 3</a></li>
+          </ul>
         </li>
         <li>
           <a class="dropdown" href="">UNIVERSO OPENDATA</a>
+          <ul class="submenu">
+              <li><a href="#">item 4</a></li>
+              <li><a href="#">item 5</a></li>
+              <li><a href="#">item 6</a></li>
+          </ul>
         </li>
         <li>
           <a class="dropdown" href="">CASOS PRÁTICOS</a>
+          <ul class="submenu">
+              <li><a href="#">item 8</a></li>
+              <li><a href="#">trilha sobre Privacidade</a></li>
+              <li><a href="#">item 7</a></li>
+          </ul>
         </li>
         <li>
           <a class="dropdown" href="">EVENTOS</a>
+          <ul class="submenu">
+              <li><a href="#">CURSOS</a></li>
+              <li><a href="#">CONCURSOS</a></li>
+              <li><a href="#">ENCONTROS</a></li>
+          </ul>
         </li>
       </ul>
     </nav>
