--- a/app/views/layouts/_callbanner.html.erb
+++ b/app/views/layouts/_callbanner.html.erb
@@ -1,3 +1,4 @@
+<script type="text/javascript">
 
 $('.call-banner').mouseover(function(){
   //classe do background de cada opção para hover
@@ -57,4 +58,4 @@ $('#vidprod').get(0).addEventListener('ended',function(){
   $('.video-call-banner').fadeOut( 0 );
   $('#call-banner').fadeIn( 0 );
 });
-    
+</script>
