--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
 		  <div class="destaque">
 		    <p class="breadcrumb">
 		      <%= link_to "INÍCIO", controller: "home", action: "index" %>  |
-		      <a href='<%="/articles/filter/articleSection/#{@article.articleSection.first}"%>'><span property="schema:articleSection"><%= @article.articleSection.first.upcase %></span></a>
+		      <a href='<%="/articles/filter/articleSection/#{@article.articleSection.first}"%>'><span property="schema:articleSection"><%= @article.articleSection.first.upcase if @article.articleSection.first %></span></a>
 		    </p>
 		    <h2 property="schema:headline"><%= @article.title %></h2>
 		    <p property="schema:datePublished" class="post-fonte">publicado em <%= @article.datePublished.strftime("%d/%m/%Y") %> por <span class="semiboldfont" property="schema:author"><%= @article.author %></span> sobre <span class="semiboldfont" property="schema:about"><%= raw(@article.about.join('</span>, <span class="semiboldfont" property="schema:about">')) %></span> em <a class="semiboldfont" property="schema:publisher" href="<%= @article.publisher.url %>" target="_blank"><%= @article.publisher.name %></a></p>
