--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,32 +1,32 @@
 <% content_for :head do %>
-  <title>Open Data for Development</title>
+  <title><%=t('platform_name')%></title>
 <% end %>
 
   <div class="grid-container">
-    <h2 class="title blackfont txtcenter">DADOS ABERTOS PARA UM DIA MELHOR</h2>
-    <h4 class="subtitle txtcenter">A maior plataforma para a nova web que queremos</h4>
+    <h2 class="title blackfont txtcenter"><%= t('od4d_title') %></h2>
+    <h4 class="subtitle txtcenter"><%= t('od4d_description') %></h4>
 
     <div id="call-banner" class="call-banner clearfix">
       <h5 class="call-title">
-        POR QUE ESSE ASSUNTO ME INTERESSA?
+        <%= t('call_title') %>
       </h5>
       <ul class="push-12-5 mobile-push-10">
         <li class="grid-25 mobile-grid-80 curioso">
           <a href="#">
             <span></span>
-            <p>Estou curioso</p>
+            <p><%= t('im_curious') %></p>
           </a>
         </li>
         <li class="grid-25 mobile-grid-80 dev">
           <a href="#">
             <span></span>
-            <p>Sou desenvolvedor</p>
+            <p><%= t('im_a_developer') %></p>
           </a>
         </li>
         <li class="grid-25 mobile-grid-80 produtor">
           <a href="#">
             <span></span>
-            <p>Sou produtor de conteúdo</p>
+            <p><%= t('im_a_content_producer') %></p>
           </a>
         </li>
       </ul>
@@ -49,37 +49,39 @@
   </div>
   <section class="grid-container content news">
     <div class="grid-33">
-      <h3 class="title-subsection">ÚLTIMAS NOTÍCIAS</h3>
+      <h3 class="title-subsection"><%= t('latest_news') %></h3>
       <ul class="list-news">
       	<% @articles.each do |article| %>
 	        <li>
-	          <h4><%= article.title.upcase %></h4>
-	          <p><%= link_to article.title[0..30].strip + "...", controller: "articles", action: "show", params: {uri: "#{article.url}"} %></p>
+	          <h4><%= article.articleSection.first.upcase if article.articleSection.first %></h4>
+	          <p><%= link_to article.title.strip, controller: "articles", action: "show", params: {uri: "#{article.url}"} %></p>
 	        </li>
         <% end %>
       </ul>
     </div>
     <div class="">
-      <h3 class="title-subsection mobile-grid-100">DESTAQUES EM <a href="#">GOVERNO</a> >></h3>
+      <h3 class="title-subsection mobile-grid-100"><%= t('featured_in') %> 
+        <a href='<%="/articles/filter/articleSection/#{t('featured_section')}"%>'>
+        <%= t('featured_section').upcase %></a> >></h3>
       <div class="destaquegov grid-33">
-          <h4 class="news-title-item title-item-destaque">Fique de olho</h4>
+          <h4 class="news-title-item title-item-destaque"><%= t('watch_out') %></h4>
           <img src="<%= asset_path 'placeholder_destaque_maior.jpg' %>" alt="" />
-          <h5 class="news-title-item">DADOS ABERTOS</h5>
-          <p class="news-txt-larger"><a href="">Conheça mais sobre como são catalogados os dados do Governo Brasileiro</a></p>
+          <h5 class="news-title-item"><%= t('featured_about_1').upcase %></h5>
+          <p class="news-txt-larger"><a href=""><%= t('featured_article_1') %></a></p>
       </div>
 
       <div class="destaque2gov grid-33">
         <div class="destaquemenor">
           <img src="<%= asset_path 'placeholder_destaque_menor.jpg' %>" alt="">
-          <h5 class="news-title-item">FUTURO DA INTERNET</h5>
-          <p class="news-txt-larger"><a href="">AAI explora o poder da Open Web para transformar a África no Activate</a></p>
+          <h5 class="news-title-item"><%= t('featured_about_2').upcase %></h5>
+          <p class="news-txt-larger"><a href=""><%= t('featured_article_2') %></a></p>
         </div>
         <ul class="list-news">
           <li class="without-top">
-            <p><a href="">AAI explora o poder da Open Web para transformar a África no Activate</a></p>
+            <p><a href=""><%= t('featured_article_3') %></a></p>
           </li>
           <li class="without-top">
-            <p><a href="">AAI explora o poder da Open Web para transformar a África no Activate</a></p>
+            <p><a href=""><%= t('featured_article_4') %></a></p>
           </li>
         </ul>
       </div>
@@ -87,28 +89,28 @@
   </section>
   <section class="bgorange">
     <div class="grid-container">
-      <h3 class="title-engaje">ENGAJE-SE <span>em 3 partes</span></h3>
+      <h3 class="title-engaje"><%= t('engage_us') %> <span><%= t('in_3_parts') %></span></h3>
       <ul class="list-engaje">
         <li class="grid-33">
           <div class="conceitos engaje-item">
-            <h4>Aprenda<br />os conceitos</h4>
-            <p><a href="">WEB SEMÂNTICA</a></p>
-            <p><a href="">RDF E RDFA</a></p>
-            <p><a href="">EXEMPLOS DE CÓDIGO</a></p>
+            <h4><%= raw(t('concepts_title')) %></h4>
+            <p><a href=""><%= t('concepts_websemantics').upcase %></a></p>
+            <p><a href=""><%= t('concepts_rdfa').upcase %></a></p>
+            <p><a href=""><%= t('concepts_examples').upcase %></a></p>
           </div>
         </li>
         <li class="grid-33">
           <div class="engaje-item integre clearfix">
-            <h4>Integre-se <br />conosco</h4>
-            <p class="be-partner"><a href="">SEJA UM<br />PARCEIRO</a></p>
-            <p class="be-colaborator"><a href="">SEJA UM<br />COLABORADOR</a></p>
+            <h4><%= raw(t('integration_title')) %></h4>
+            <p class="be-partner"><a href=""><%= raw(t('integration_beapartner').upcase) %></a></p>
+            <p class="be-colaborator"><a href=""><%= raw(t('integration_colaborator').upcase) %></a></p>
           </div>
         </li>
         <li class="grid-33">
           <div class="engaje-item compartilhe">
-            <h4>Compartilhe nas redes sociais</h4>
+            <h4><%= raw(t('share_title')) %></h4>
             <div>
-              <p>EU DEFENDO<br />A INTERNET LIVRE</p>
+              <p><%= raw(t('share_quote').upcase) %></p>
               <ul class="social-list-link">
                 <li class="twitter"><a href=""></a></li>
                 <li class="facebook"><a href=""></a></li>
@@ -121,77 +123,52 @@
     </div>
   </section>
   <section class="grid-container casos-praticos">
-    <h3 class="fontitalic blackgrayfont">CASOS PRÁTICOS</h3>
+    <h3 class="fontitalic blackgrayfont"><%= t('cases_title').upcase %></h3>
 
     <div id="horizontalTab">
       <div class="resp-tabs-container bggreen">
           <div class="text-tab clearfix">
             <div class="text-tab clearfix">
               <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
-              <h4>EDUCAÇÃO EM DADOS ABERTOS</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h4><%= t('cases_headline_1') %></h4>
+              <p><%= t('cases_text_1') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
               <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
-              <h4>PRIVACIDADE EM DADOS ABERTOS</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunPRIVACIDADEt ut labore et dolore magna alPRIVACIDADEiqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure doPRIVACIDADElor in reprPRIVACIDADEehenderit in voluptate velit esse
-              cillum dolore euPRIVACIDADE fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunPRIVACIDADEt mollit anim id est laborum.</p>
+              <h4><%= t('cases_headline_2') %></h4>
+              <p><%= t('cases_text_2') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
               <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
-              <h4>TRÂNSITO EM DADOS ABERTOS</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enTRÂNSITOim ad minim veniam,
-              quis nostrud exTRÂNSITOercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor TRÂNSITOin reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. ExcepteuTRÂNSITOr sint occaecat cupidatat non
-              proident, sunt iTRÂNSITOn culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h4><%= t('cases_headline_3') %></h4>
+              <p><%= t('cases_text_3') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
               <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
-              <h4>GOVERNO EM DADOS ABERTOS</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incidGOVERNOidunt ut labore et dolore magna aliGOVERNOqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis autGOVERNOe irure dolGOVERNOor in reprehenderit inGOVERNO voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deGOVERNOserunt mollit anim id est laborum.</p>
+              <h4><%= t('cases_headline_4') %></h4>
+              <p><%= t('cases_text_4') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
               <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
-              <h4>SAÚDE EM DADOS ABERTOS</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation uSAÚDEllamco laboris nisi utSAÚDE aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore SAÚDEeu fugiat nulla pariatur. ExcSAÚDEepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h4><%= t('cases_headline_5') %></h4>
+              <p><%= t('cases_text_5') %></p>
             </div>
           </div>
       </div>
       <ul class="resp-tabs-list">
-        <li class="grid-20">EDUCAÇÃO</li>
-        <li class="grid-20">PRIVACIDADE</li>
-        <li class="grid-20">TRÂNSITO</li>
-        <li class="grid-20">GOVERNO</li>
-        <li class="grid-20">SAÚDE</li>
+        <li class="grid-20"><%= t('cases_tab_1') %></li>
+        <li class="grid-20"><%= t('cases_tab_2') %></li>
+        <li class="grid-20"><%= t('cases_tab_3') %></li>
+        <li class="grid-20"><%= t('cases_tab_4') %></li>
+        <li class="grid-20"><%= t('cases_tab_5') %></li>
       </ul>
     </div>
     
@@ -199,7 +176,7 @@
 
   <section class="bggray txtcenter partners">
     <div class="grid-container">
-      <h3 class="fontitalic thinfont">PARCEIROS</h3>
+      <h3 class="fontitalic thinfont"><%= t('partners_title') %></h3>
       <ul>
         <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
         <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
