--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
               <li><a href="#">ENCONTROS</a></li>
           </ul>
         </li>
-        <li><a href=""><span class="login">LOGIN</span></a></li>
+        <li><a href="/casein"><span class="login">LOGIN</span></a></li>
       </ul>
     </nav>
   </header>
