--- a/app/views/articles/filter.html.erb
+++ b/app/views/articles/filter.html.erb
@@ -24,6 +24,10 @@
           <div class="faixa">
             <p>OD4D no Twitter</p>
           </div>
+          <div>
+<a class="twitter-timeline" href="https://twitter.com/od4_d" data-widget-id="515600616467353600">Tweets by @od4_d</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </div>
       </div>
     </aside>
   </article>
